//
// Created by azkalaak on 11/01/2020.
//

#ifndef ZIA_TEMPO_API_HPP
#define ZIA_TEMPO_API_HPP

class Api {
public:

private:

};

#endif //ZIA_TEMPO_API_HPP
